# Smart-FAQ-RAG-Search-System

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
data/: sample_faqs.csv
examples/: sample_queries.json
src/smart_faq/: __init__.py  data_loader.py  evaluation.py  main.py  prompting.py  reranking.py  retrieval.py
tests/: test_data_loader.py  test_evaluation.py  test_main.py  test_readme.py  test_reranking_prompting.py  test_retrieval.py
