[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-faq-rag-search"
version = "0.1.0"
description = "FAQ retrieval system using TF-IDF, sentence embeddings, semantic similarity, reranking, and retrieval evaluation."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Hadis Arefanjazi" }
]
dependencies = [
  "pandas>=2.0",
  "scikit-learn>=1.2"
]

[project.optional-dependencies]
semantic = [
  "sentence-transformers>=2.2"
]
dev = [
  "pytest>=7.0,<8.0"
]

[project.scripts]
smart-faq = "smart_faq.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
